# python-template

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
tests/: conftest.py  test_unitario.py
