[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Template de um projeto python"
authors = ["Revton Braga <revtonbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
blue = "^0.8.0"
mkdocs = "^1.2.3"
prospector = "^1.7.7"
safety = "^1.10.3"
pip-audit = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
