[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Template de um projeto python"
authors = ["Revton Braga <revtonbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
blue = "^0.9.1"
mkdocs = "^1.2.3"
safety = "^2.3.5"
pip-audit = "^2.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
